[project]
name = "pathway-pipeline"
version = "0.1.0"
description = "just another novelty"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "agno>=2.3.21",
    "fastapi>=0.128.0",
    "fastmcp>=2.12.5",
    "mistralai>=1.9.11",
    "pathway[all,xpack-llm]==0.27.1",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
]
